# chat-app-capstone

./: .dockerignore  .gitignore  Makefile  README.md  additional-requirement.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: .env.example  Dockerfile  agui.py  logging_config.py  main.py  pipeline.py  pyproject.toml  session.py
agents/agents/: data_analyst.py  extractor.py  lead_analyst.py  report_writer.py  shared.py  tools.py  web_researcher.py
agents/prompts/: data_analyst.md  extractor.md  lead_analyst.md  report_writer.md
agents/tests/: test_api.py  test_session.py  test_tools.py
agents_langgraph/: .env.example  Dockerfile  README.md  logging_config.py  main.py  pipeline.py  pyproject.toml  session.py
agents_langgraph/agents/: data_analyst.py  extractor.py  report_writer.py  shared.py  spec.py  tools.py  web_researcher.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArtifactPanel.tsx  ChatPanel.tsx  InterruptOverlay.tsx  TraceTree.tsx
frontend/src/hooks/: useAGUI.ts
frontend/src/mock/: agui-events.ts
frontend/src/store/: reducer.ts  types.ts
frontend/src/tests/: decoder.test.ts
shared/: README.md  pyproject.toml
shared/src/deep_analyst_shared/: prompts.py  session.py  tools.py
shared/src/deep_analyst_shared/prompts/: extractor.md  web_researcher.md
shared/tests/: test_session.py  test_tools.py
