[project]
name = "agents-langgraph"
version = "0.1.0"
description = "Deep Analyst backend — LangGraph engine (mirrors agents/, Google ADK engine)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-protocol>=0.1.18",
    "deep-analyst-shared",
    "fastapi>=0.128.8",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.uv.sources]
deep-analyst-shared = { workspace = true }
